--- a/composer.json
+++ b/composer.json
@@ -6,9 +6,9 @@
     "license": "MIT",
     "require": {
         "php": "^8.1",
-        "brd6/notion-sdk-php": "^1.2",
-        "fiveam-code/laravel-notion-api": "^1.1",
+        "fiveam-code/laravel-notion-api": "^v1.1",
         "guzzlehttp/guzzle": "^7.2",
+        "laravel/fortify": "^1.21",
         "laravel/framework": "^10.10",
         "laravel/sanctum": "^3.3",
         "laravel/tinker": "^2.8",
